Bug 124243 - FILEOPEN DOCX Deleted chart axis labels appear in Writer
Summary: FILEOPEN DOCX Deleted chart axis labels appear in Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0
Keywords: filter:docx, implementationError
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-03-21 15:09 UTC by NISZ LibreOffice Team
Modified: 2019-08-14 08:07 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (31.58 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-03-21 15:10 UTC, NISZ LibreOffice Team
Details
Screenshot (98.30 KB, image/png)
2019-03-21 15:10 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-03-21 15:09:25 UTC
Description:
Deleted chart axis labels in DOCX documents created with Microsoft Word 2016 appears when the document is opened in LibreOffice Writer 6.3.0.0.alpha0+.

Steps to Reproduce:
    1. Create a new document in Microsoft Word.
    2. Insert a 3D grouped bar chart.
    3. Delete the X axis labels: Go to Chart tools, Design, Add Chart Component. Under Axes disable the Primary horizontal option.
    4. Save the file as DOCX.
    5. Open the same file in LibreOffice Writer.
    6. View the attached Screenshot
    7. Compare the original file opened in Word and Writer.
    8. Notice that deleted chart axis labels appear in Writer
    9. In Writer, edit the chart and the X axis properties. Go to the Labels tab and notice the Display labels box is checked. Cleaning it hides the labels.

Actual Results:
Deleted chart axis labels appear in Writer when the document is opened in LibreOffice Writer 6.3.0.0.alpha0+.

Expected Results:
Chart axis labels should should be deleted as the original file when the document is opened in Microsoft Word 2016


Reproducible: Always


User Profile Reset: No



Additional Info:
Reproduced in:

Version: 6.3.0.0.alpha0+
Build ID: 2f83055cdbd915d5036a7b4374b4ad10e6efc65f
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded

Verzió: 5.4.7.2
Build az.: c838ef25c16710f8838b1faec480ebba495259d0
CPU szálak: 4; OS: Windows 6.2; Felületmegjelenítés: GL; 
Területi beállítások: hu-HU (hu_HU); Calc: CL

Verzió: 4.4.0.3
Build az.: de093506bcdc5fafd9023ee680b8c60e3e0645d7
Területi beállítások: hu_HU

Verzió: 4.2.0.4
Build az.: 05dceb5d363845f2cf968344d7adab8dcfb2ba71

Chart is not even imported in older versions like:
Verzió: 4.1.0.4
Build az.: 89ea49ddacd9aa532507cbf852f2bb22b1ace28
Comment 1 NISZ LibreOffice Team 2019-03-21 15:10:37 UTC
Created attachment 150149 [details]
Example file
Comment 2 NISZ LibreOffice Team 2019-03-21 15:10:55 UTC
Created attachment 150150 [details]
Screenshot
Comment 3 mulla.tasanim 2019-03-21 20:52:31 UTC
Hello
Thank you for reporting the bug.

I can confirm that the bug is present in

Version: 6.2.1.2 (x64)
Build ID: 7bcb35dc3024a62dea0caee87020152d1ee96e71
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL


Version: 6.3.0.0.alpha0+ (x64)
Build ID: 91cdf22b88a4f7bec243c8fb187627e766d3294c
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-08_00:38:10
Locale: en-US (en_US); UI-Language: en-US
Calc: CL
Comment 4 Commit Notification 2019-08-14 07:06:43 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/e8c7f4cd5bd95b8112c1795ed11b7ac7caed00a2%5E%21

tdf#124243 fix import of deleted X axis of 3D charts

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.