tdf#124243 fix import of deleted X axis of 3D charts

3D charts imported from ODF and DOCX showed the deleted X axis.

Change-Id: I3316d08af3acd122e5f75fbf0031dda6a337edbd